ApiRequest1/api.css
body {
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
    background-color: rgb(0, 14, 37);
}

.card {
    display: none;
    width: 300px;
    height: 400px;
    overflow: hidden;
    border: 2px solid white;
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.22);
}

.profile {
    box-sizing: border-box;
    margin: 3px;
    width: calc(100% - 6px);
    height: 75%;
    border-radius: 10px 10px 0 0;
    overflow: hidden;
}

.profile img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.info {
    padding: 7px;
    color: white;
    line-height: 1.2;
}

button {
    padding: 8px 14px;
    border: none;
    border-radius: 5px;
    color: white;
    font-weight: bold;
    cursor: pointer;
}

.button {
    background: green;
}

.hide {
    background: crimson;
}

